# birdfy-home-assistant

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  quality_scale.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  hardware_validation.yml
.github/workflows/: ci.yml
custom_components/birdfy/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  image.py  manifest.json  repairs.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/birdfy/translations/: en.json
docs/: API_DISCOVERY.md  HARDWARE_EVIDENCE.md  HARDWARE_TEST_RESULTS_TEMPLATE.md  HARDWARE_VALIDATION.md  LOCAL_DEVICE_DISCOVERY.md  LOCAL_FIRMWARE_BRINGUP.md  LOCAL_RTMP_MEDIAMTX.md  RELEASE_CHECKLIST.md
docs/adr/: 0001-unofficial-api-and-read-only-controls.md  0002-local-firmware-or-hardware-replacement.md
pybirdfy/: __init__.py
tests/: test_api.py  test_config_flow_ha.py  test_discover_local_device.py  test_security.py
tests/fixtures/: devices.json  events.json  login.json
tools/: birdfy_simulator.py  check_no_private_artifacts.py  check_release_ready.py  discover_local_device.py
