[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybirdfy"
version = "0.1.1"
description = "Async Birdfy / Netvue API client and Home Assistant custom integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Birdfy Home Assistant Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7",
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.13",
]
homeassistant = [
  "homeassistant>=2025.12.0",
]
ha-tests = [
  "pytest-homeassistant-custom-component>=0.13.330",
]

[tool.setuptools.packages.find]
include = ["pybirdfy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "T20"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pybirdfy", "custom_components"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
strict = false
